[project]
name = "piicodev-unified"
version = "1.10.1"
description = "Drivers for the PiicoDev ecosystem of sensors and modules"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name="Core Electronics", email="production.inbox@coreelectronics.com.au" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
]

dependencies = [
    "smbus2; sys_platform == 'linux'"
]

[project.urls]
Homepage = "https://github.com/CoreElectronics/CE-PiicoDev-Unified"
Documentation = "https://github.com/CoreElectronics/CE-PiicoDev-Unified/blob/main/doc/METHODS.md"
Repository = "https://github.com/CoreElectronics/CE-PiicoDev-Unified"
Issues = "https://github.com/CoreElectronics/CE-PiicoDev-Unified/issues"

[tool.setuptools]
py-modules = ["PiicoDev_Unified"]

[project.optional-dependencies]
dev = [
    "python-minifier @ git+https://github.com/garynthompson/python-minifier.git@remove_unused_platforms"
]